crates/oxc_angular_compiler/tests/snapshots/integration_test__template_literal_with_pipe.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0);
    i0.ɵɵpipe(1,"percent");
  }
  if ((rf & 2)) {
    const num_r1 = 0.75;
    i0.ɵɵtextInterpolate1(" ",`${i0.ɵɵpipeBind1(1,1,num_r1)}`);
  }
}
