crates/oxc_angular_compiler/tests/snapshots/integration_test__template_literal_without_pipe.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵtext(0); }
  if ((rf & 2)) {
    const name_r1 = "world";
    i0.ɵɵtextInterpolate1(" ",`Hello ${name_r1}!`);
  }
}
