crates/oxc_angular_compiler/tests/snapshots/integration_test__todo_list.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
const _forTrack0 = ($index,$item) =>$item.id;
function TodoListComponent_For_7_Template(rf,ctx) {
  if ((rf & 1)) {
    const _r1 = i0.ɵɵgetCurrentView();
    i0.ɵɵtext(0,"\n            ");
    i0.ɵɵelementStart(1,"div");
    i0.ɵɵtext(2,"\n                ");
    i0.ɵɵelementStart(3,"input",1);
    i0.ɵɵcontrolCreate();
    i0.ɵɵtwoWayListener("ngModelChange",function TodoListComponent_For_7_Template_input_ngModelChange_3_listener($event) {
      const todo_r2 = i0.ɵɵrestoreView(_r1).$implicit;
      (i0.ɵɵtwoWayBindingSet(todo_r2.done,$event) || (todo_r2.done = $event));
      return i0.ɵɵresetView($event);
    });
    i0.ɵɵelementEnd();
    i0.ɵɵtext(4,"\n                ");
    i0.ɵɵelementStart(5,"span");
    i0.ɵɵtext(6);
    i0.ɵɵelementEnd();
    i0.ɵɵtext(7,"\n                ");
    i0.ɵɵelementStart(8,"button",2);
    i0.ɵɵlistener("click",function TodoListComponent_For_7_Template_button_click_8_listener() {
      const todo_r2 = i0.ɵɵrestoreView(_r1).$implicit;
      const ctx_r2 = i0.ɵɵnextContext();
      return i0.ɵɵresetView(ctx_r2.removeTodo(todo_r2));
    });
    i0.ɵɵtext(9,"X");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(10,"\n            ");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(11,"\n        ");
  }
  if ((rf & 2)) {
    const todo_r2 = ctx.$implicit;
    i0.ɵɵadvance();
    i0.ɵɵclassProp("completed",todo_r2.done);
    i0.ɵɵadvance(2);
    i0.ɵɵtwoWayProperty("ngModel",todo_r2.done);
    i0.ɵɵcontrol();
    i0.ɵɵadvance(3);
    i0.ɵɵtextInterpolate(todo_r2.text);
  }
}
function TodoListComponent_ForEmpty_8_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0,"\n            ");
    i0.ɵɵelementStart(1,"p");
    i0.ɵɵtext(2,"No todos yet!");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3,"\n        ");
  }
}
function TodoListComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0,"\n        ");
    i0.ɵɵelementStart(1,"h1");
    i0.ɵɵtext(2);
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3,"\n        ");
    i0.ɵɵelementStart(4,"input",0);
    i0.ɵɵcontrolCreate();
    i0.ɵɵtwoWayListener("ngModelChange",function TodoListComponent_Template_input_ngModelChange_4_listener($event) {
      (i0.ɵɵtwoWayBindingSet(ctx.newTodo,$event) || (ctx.newTodo = $event));
      return $event;
    });
    i0.ɵɵlistener("keyup.enter",function TodoListComponent_Template_input_keyup_enter_4_listener() {
      return ctx.addTodo();
    });
    i0.ɵɵelementEnd();
    i0.ɵɵtext(5,"\n        ");
    i0.ɵɵrepeaterCreate(6,TodoListComponent_For_7_Template,12,4,null,null,_forTrack0,
        false,TodoListComponent_ForEmpty_8_Template,4,0);
  }
  if ((rf & 2)) {
    i0.ɵɵadvance(2);
    i0.ɵɵtextInterpolate(ctx.title);
    i0.ɵɵadvance(2);
    i0.ɵɵtwoWayProperty("ngModel",ctx.newTodo);
    i0.ɵɵcontrol();
    i0.ɵɵadvance(2);
    i0.ɵɵrepeater(ctx.todos);
  }
}
