crates/oxc_angular_compiler/tests/snapshots/integration_test__two_way_binding.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"input",0);
    i0.ɵɵcontrolCreate();
    i0.ɵɵtwoWayListener("ngModelChange",function TestComponent_Template_input_ngModelChange_0_listener($event) {
      (i0.ɵɵtwoWayBindingSet(ctx.name,$event) || (ctx.name = $event));
      return $event;
    });
    i0.ɵɵelementEnd();
  }
  if ((rf & 2)) {
    i0.ɵɵtwoWayProperty("ngModel",ctx.name);
    i0.ɵɵcontrol();
  }
}
