crates/oxc_angular_compiler/tests/snapshots/integration_test__unused_template_reference.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelement(0,"input",null,0);
    i0.ɵɵelementStart(2,"button",1);
    i0.ɵɵlistener("click",function TestComponent_Template_button_click_2_listener() {
      return ctx.doSomething();
    });
    i0.ɵɵelementEnd();
  }
}
